--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Diego Mesias | Portafolio</title>
   <meta name="description" content="Portafolio de Ingeniero Informático: proyectos, habilidades, certificados y contacto." />
-  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="assest/css/style.css" />
 </head>
 
 <body>
@@ -32,21 +32,21 @@
 
         <div class="cta">
           <a class="btn" href="#proyectos">Ver proyectos</a>
-          <a class="btn ghost" href="assets/cv.pdf" target="_blank" rel="noreferrer">Descargar CV</a>
+          <a class="btn ghost" href="assest/cv.pdf" target="_blank" rel="noreferrer">Descargar CV</a>
         </div>
 
         <div class="links">
           <a href="https://github.com/dimesias" target="_blank" rel="noreferrer">GitHub || </a>
           <a href="https://www.linkedin.com/in/diegotrabajo/" target="_blank" rel="noreferrer">LinkedIn || </a>
-          <a href="diegomesias2003@gmail.com">diegomesias2003@gmail.com</a>
+          <a href="mailto:diegomesias2003@gmail.com">diegomesias2003@gmail.com</a>
         </div>
       </div>
 
       <div class="hero__card">
-        <img class="avatar" src="foto_PORTAFOLIO.png" alt="Foto de Diego" />
+        <img class="avatar" src="assest/img/foto_PORTAFOLIO.png" alt="Foto de Diego" />
         <div class="mini">
-          <p><b>Stack:</b> Html, Css, Js, Python, SQL, Power BI, Excel, Ingles Intermedio, Machine Learning y Deep learning</p>
-          <p><b>Intereses:</b> Creacion de  paginas Web, Ciencia de datos, Desarrollador Full Stack</p>
+          <p><b>Stack:</b> Html, Css, Js, Python, SQL, Power BI, Excel, Inglés Intermedio, Machine Learning y Deep Learning</p>
+          <p><b>Intereses:</b> Creación de páginas Web, Ciencia de Datos, Desarrollador Full Stack</p>
           <p><b>Ubicación:</b> Santiago de Chile</p>
         </div>
       </div>
@@ -70,7 +70,7 @@
             <li>CSS</li>
             <li>JavaScript</li>
             <li>Manejo de formularios y validaciones</li>
-            <li>Consumo de Apis</li>
+            <li>Consumo de APIs</li>
           </ul>
         </div>
         <div class="card">
@@ -79,7 +79,7 @@
             <li>Python</li>
             <li>SQL</li>
             <li>Manejo de datos</li>
-            <li>Automatizacion de reportes</li>
+            <li>Automatización de reportes</li>
           </ul>
         </div>
         <div class="card">
@@ -88,71 +88,60 @@
             <li>Git / GitHub</li>
             <li>Firebase</li>
             <li>Power BI / Excel</li>
-            <li>Wordpress</li>
+            <li>WordPress</li>
           </ul>
         </div>
       </div>
     </section>
 
     <section id="proyectos" class="section">
-      <div class="section__head">
-        <h2>Proyectos</h2>
-        
-      </div>
-
+      <h2>Proyectos</h2>
       <div id="projects" class="grid projects"></div>
     </section>
 
-  
-
     <section id="certificados" class="section">
-  <section id="certificados" class="section">
-  
-    <h2>Certificaciones</h2>
+      <h2>Certificaciones</h2>
 
-    <div class="cert-wide card">
+      <div class="cert-wide card">
         <div class="cert-wide__left">
-        <h3>Ingeniería Informática – DUOC UC</h3>
-        <p class="muted">Certificación por módulos · 2026</p>
+          <h3>Ingeniería Informática – DUOC UC</h3>
+          <p class="muted">Certificación por módulos · 2026</p>
 
-        <ul class="cert-list">
+          <ul class="cert-list">
             <li>Análisis y Desarrollo de Modelos de Datos</li>
             <li>Calidad de Software</li>
             <li>Análisis y Planificación de Requerimientos Informáticos</li>
             <li>Programación de Software</li>
             <li>Arquitectura de Software</li>
             <li>Conocimientos en Machine Learning</li>
-        </ul>
+          </ul>
         </div>
 
         <div class="cert-wide__right">
-        <div class="cert-box">
+          <div class="cert-box">
             <p class="muted"><b>Documento:</b> Certificado DUOC (PDF)</p>
-            <a class="btn ghost" href="./certificados.pdf" target="_blank" rel="noreferrer">
-                 Ver certificado (PDF)
+            <a class="btn ghost" href="assest/certificados.pdf" target="_blank" rel="noreferrer">
+              Ver certificado (PDF)
             </a>
-
-            <a class="btn" href="./certificados.pdf" download>
+            <a class="btn" href="assest/certificados.pdf" download>
               Descargar PDF
             </a>
-        </div>
+          </div>
 
-        <div class="cert-box">
-            
+          <div class="cert-box">
             <p class="muted"><b>Futuras formaciones:</b> Deep Learning</p>
+          </div>
         </div>
-        </div>
-    </div>
-</section>
-
-
+      </div>
+    </section>
   </main>
 
   <footer class="footer">
-    <p>© <span id="year"></span> Diego Mesias ·</p>
+    <p>© <span id="year"></span> Diego Mesias</p>
   </footer>
 
-  <script src="../js/main.js"></script>
+  <script src="assest/js/main.js"></script>
 </body>
 </html>
+
 
