Update stylesheet and script paths in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Portafolio de Ingeniero Informático: proyectos, habilidades, certificados y contacto." />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="../css/style.css" />
 </head>
 
 <body>
@@ -186,7 +186,7 @@
   </footer>
 
   <!-- JS -->
-  <script src="assets/js/main.js"></script>
+  <script src="../js/main.js"></script>
 
 </body>
 </html>
