Update image source path in index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="hero__card">
         <img
           class="avatar"
-          src="assets/img/foto_PORTAFOLIO.png"
+          src="../img/foto_PORTAFOLIO.png"
           alt="Foto de Diego"
         />
 
