--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
 
       <div class="hero__card">
         <img
-          class="avatar"
-          src="../img/foto_PORTAFOLIO.png"
-          alt="Foto de Diego"
+          class="avatar"src="foto_PORTAFOLIO.png" alt="Foto de Diego"
         />
 
         <div class="mini">
