--- a/index.html
+++ b/index.html
@@ -59,26 +59,25 @@
       </div>
 
       <div class="hero__card">
-        <img
-          class="avatar"src="foto_PORTAFOLIO.png" alt="Foto de Diego"
-        />
+  <img
+    class="avatar"
+    src="assets/img/foto_PORTAFOLIO.png"
+    alt="Foto de Diego"
+  />
 
-        <div class="mini">
-          <p>
-            <b>Stack:</b> HTML, CSS, JavaScript, Python, SQL, Power BI, Excel,
-            Inglés Intermedio, Machine Learning y Deep Learning
-          </p>
+  <div class="mini">
+    <p><b>Stack:</b> HTML, CSS, JavaScript, Python, SQL, Power BI, Excel,
+      Inglés Intermedio, Machine Learning y Deep Learning
+    </p>
 
-          <p>
-            <b>Intereses:</b> Creación de páginas web, Ciencia de Datos,
-            Desarrollo Full Stack
-          </p>
+    <p><b>Intereses:</b> Creación de páginas web, Ciencia de Datos,
+      Desarrollo Full Stack
+    </p>
 
-          <p>
-            <b>Ubicación:</b> Santiago de Chile
-          </p>
-        </div>
-      </div>
+    <p><b>Ubicación:</b> Santiago de Chile</p>
+  </div>
+</div>
+
     </section>
 
     <!-- SOBRE MI -->
