Update image source for portfolio photo

--- a/index.html
+++ b/index.html
@@ -59,11 +59,8 @@
       </div>
 
       <div class="hero__card">
-  <img
-    class="avatar"
-    src="assets/img/foto_PORTAFOLIO.png"
-    alt="Foto de Diego"
-  />
+  <img class="avatar" src="assets/foto_PORTAFOLIO.png" alt="Foto de Diego">
+
 
   <div class="mini">
     <p><b>Stack:</b> HTML, CSS, JavaScript, Python, SQL, Power BI, Excel,
