Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -217,7 +217,9 @@
     <p>© <span id="year"></span> Diego Mesias ·</p>
   </footer>
 
-  <script src="js/main.js"></script>
+  <script src="./main.js"></script>
+
 </body>
 </html>
+
 
