--- a/index.html
+++ b/index.html
@@ -7,7 +7,147 @@
   <meta name="description" content="Portafolio de Ingeniero Informático: proyectos, habilidades, certificados y contacto." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,400;12..96,500;12..96,600;12..96,700&family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Bri<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Diego Mesias | Portafolio</title>
+
+  <meta name="description" content="Portafolio de Ingeniero Informático: proyectos, habilidades, certificados y contacto." />
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:wght@400;500;600;700&family=DM+Sans:wght@400;500;600;700&display=swap" rel="stylesheet" />
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="./style.css" />
+</head>
+
+<body>
+
+<header class="header">
+  <a class="logo" href="#top">DM</a>
+
+  <button class="menu-toggle" id="menuToggle" aria-label="Abrir menú">
+    <span></span><span></span><span></span>
+  </button>
+
+  <nav class="nav" id="nav">
+    <a href="#sobre-mi">Sobre mí</a>
+    <a href="#habilidades">Habilidades</a>
+    <a href="#proyectos">Proyectos</a>
+    <a href="#certificados">Certificados</a>
+    <a href="#contacto">Contacto</a>
+  </nav>
+</header>
+
+<main id="top">
+
+  <!-- HERO -->
+  <section class="hero section--hero">
+    <div class="hero__content">
+      <p class="tag">Ingeniero Informático</p>
+      <h1>Hola soy <span class="accent">DIEGO</span> 👋</h1>
+      <p class="subtitle">
+        Interesado en el análisis de datos y en transformar información en conocimiento útil.
+      </p>
+
+      <div class="cta">
+        <a class="btn" href="#proyectos">Ver proyectos</a>
+        <a class="btn ghost" href="./assets/CV_DiegoMesiasMaldonado.pdf" target="_blank">
+          Descargar CV
+        </a>
+      </div>
+
+      <div class="links compact">
+        <a class="btn icon" href="https://github.com/dimesias" target="_blank">GitHub</a>
+        <a class="btn icon" href="https://www.linkedin.com/in/diegotrabajo/" target="_blank">LinkedIn</a>
+        <a class="btn icon" href="mailto:diegomesias2003@gmail.com">Email</a>
+      </div>
+    </div>
+
+    <div class="hero__card">
+      <div class="avatar-wrap">
+        <img class="avatar" src="./assets/foto_PORTAFOLIO.png" alt="Foto de Diego" />
+      </div>
+    </div>
+  </section>
+
+  <!-- SOBRE MI -->
+  <section id="sobre-mi" class="section section--alt">
+    <h2>Sobre mí</h2>
+    <p>
+      Ingeniero Informático en último año, con interés en ciencia de datos,
+      Power BI y desarrollo de soluciones tecnológicas.
+    </p>
+  </section>
+
+  <!-- HABILIDADES -->
+  <section id="habilidades" class="section">
+    <h2>Habilidades</h2>
+
+    <ul class="skills">
+      <li>HTML, CSS, JavaScript</li>
+      <li>Python, SQL</li>
+      <li>Power BI, Excel</li>
+      <li>Git & GitHub</li>
+      <li>Machine Learning</li>
+    </ul>
+  </section>
+
+  <!-- PROYECTOS -->
+  <section id="proyectos" class="section">
+    <h2>Proyectos</h2>
+
+    <div class="project-card">
+      <h3>Portafolio Web</h3>
+      <p>Portafolio personal desarrollado con HTML, CSS y JavaScript.</p>
+      <a class="btn ghost" href="https://github.com/dimesias" target="_blank">
+        Ver repositorio
+      </a>
+    </div>
+  </section>
+
+  <!-- CERTIFICADOS -->
+  <section id="certificados" class="section section--alt">
+    <h2>Certificaciones</h2>
+
+    <ul>
+      <li>Análisis y Desarrollo de Modelos de Datos – DUOC UC</li>
+      <li>Calidad de Software y Requerimientos – DUOC UC</li>
+      <li>Programación y Machine Learning – DUOC UC</li>
+    </ul>
+
+    <a class="btn" href="./assets/certificados.pdf" download>
+      Descargar certificados
+    </a>
+  </section>
+
+  <!-- CONTACTO -->
+  <section id="contacto" class="section section--contact section--alt">
+    <h2>Contacto</h2>
+
+    <p>¿Tienes un proyecto en mente? Escríbeme 👇</p>
+
+    <a class="btn btn-whatsapp" href="https://wa.me/56920596186" target="_blank">
+      WhatsApp
+    </a>
+  </section>
+
+</main>
+
+<footer class="footer">
+  <p>© <span id="year"></span> Diego Mesias</p>
+</footer>
+
+<!-- JS -->
+<script src="./main.js"></script>
+
+</body>
+</html>
+olage+Grotesque:opsz,wght@12..96,400;12..96,500;12..96,600;12..96,700&family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -221,5 +361,6 @@
 
 </body>
 </html>
+
 
 
